--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layout.html">
+>
 <head>
     <meta charset="UTF-8">
     <title>Products</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
 </head>
 <body>
-    <div class="p-3">
+    <div class="p-3" layout:fragment="content">
         <h1>Products</h1>
         <table class="table table-dark table-striped table-bordered">
             <thead>
