--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -11,6 +11,9 @@
 <body>
     <div class="p-3" layout:fragment="content">
         <h1>Products</h1>
+        <a class="btn btn-primary mb-3" th:href="@{/addProduct}">
+            <i class="fas fa-plus"></i> Add Product
+        </a>
         <table class="table table-dark table-striped table-bordered">
             <thead>
                 <tr>
