--- a/src/main/resources/templates/new-product.html
+++ b/src/main/resources/templates/new-product.html
@@ -11,7 +11,7 @@
 <body>
     <div class="p-3" layout:fragment="content">
         <h1>Products</h1>
-        <form method="post" th:action="@{/saveProduct}">
+        <form method="post" th:action="@{/admin/saveProduct}">
             <div class="mb-3">
                 <label class="form-label">Name</label>
                 <input type="text" name="name" class="form-control" th:value="${product.name}">
