--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -11,7 +11,7 @@
 <body>
     <div class="p-3" layout:fragment="content">
         <h1>Products</h1>
-        <a class="btn btn-primary mb-3" th:href="@{/addProduct}">
+        <a class="btn btn-primary mb-3" th:href="@{/admin/addProduct}">
             <i class="fas fa-plus"></i> Add Product
         </a>
         <table class="table table-dark table-striped table-bordered">
@@ -32,7 +32,7 @@
                     <td th:text="${product.description}"></td>
                     <td th:text="${product.stocked}"></td>
                     <td>
-                        <a class="btn btn-danger" th:href="@{/delete(id=${product.id})}" onclick="return confirm('Are you sure you want to delete this product?');">
+                        <a class="btn btn-danger" th:href="@{/admin/delete(id=${product.id})}" onclick="return confirm('Are you sure you want to delete this product?');">
                             <i class="fas fa-trash-alt"></i> Delete
                         </a>
                     </td>
