--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -2,6 +2,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-spring-security"
       layout:decorate="layout.html">
 >
 <head>
@@ -11,9 +12,11 @@
 <body>
     <div class="p-3" layout:fragment="content">
         <h1>Products</h1>
-        <a class="btn btn-primary mb-3" th:href="@{/admin/addProduct}">
-            <i class="fas fa-plus"></i> Add Product
-        </a>
+        <div class="mb-3" sec:authorize="hasRole('ADMIN')">
+            <a class="btn btn-primary mb-3" th:href="@{/admin/addProduct}">
+                <i class="fas fa-plus"></i> Add Product
+            </a>
+        </div>
         <table class="table table-dark table-striped table-bordered">
             <thead>
                 <tr>
@@ -31,7 +34,7 @@
                     <td th:text="${product.price}"></td>
                     <td th:text="${product.description}"></td>
                     <td th:text="${product.stocked}"></td>
-                    <td>
+                    <td sec:authorize="hasRole('ADMIN')">
                         <a class="btn btn-danger" th:href="@{/admin/delete(id=${product.id})}" onclick="return confirm('Are you sure you want to delete this product?');">
                             <i class="fas fa-trash-alt"></i> Delete
                         </a>
